--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 
 </html>
 <script>
-    window.location = "https://adamcia.github.io/Strona/index.php";
+    window.location = "index.php";
 </script>
