--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-
+    <h1>cos tu jest</h1>
 </body>
 
 </html>
 <script>
-    window.location = "index.php";
+    href = "index.php";
 </script>
